--- a/bin/wc3cd.cfg
+++ b/bin/wc3cd.cfg
@@ -1,4 +1,4 @@
-trusted = 127.0.0.1, 192.168.0.3
+trusted = 127.0.0.1 192.168.0.3
 db_host = jdbc:mysql://localhost/ghost
 db_username = root
 db_password =
